Fixes issues with schemas and container ports