@@ -1,5 +1,6 @@
 package pt.ulisboa.tecnico.socialsoftware.common.security;
 
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.KeyFactory;
@@ -10,9 +11,9 @@ import java.security.spec.X509EncodedKeySpec;
 
 public class RSAUtil {
 
-    public static PrivateKey getPrivateKey(Path keyPath) throws Exception {
+    public static PrivateKey getPrivateKey(InputStream inputStream) throws Exception {
 
-        byte[] keyBytes = Files.readAllBytes(keyPath);
+        byte[] keyBytes = inputStream.readAllBytes();
 
         PKCS8EncodedKeySpec spec =
                 new PKCS8EncodedKeySpec(keyBytes);
@@ -20,9 +21,9 @@ public class RSAUtil {
         return kf.generatePrivate(spec);
     }
 
-    public static PublicKey getPublicKey(Path keyPath) throws Exception {
+    public static PublicKey getPublicKey(InputStream inputStream) throws Exception {
 
-        byte[] keyBytes = Files.readAllBytes(keyPath);
+        byte[] keyBytes = inputStream.readAllBytes();
 
         X509EncodedKeySpec spec = new X509EncodedKeySpec(keyBytes);
         KeyFactory kf = KeyFactory.getInstance("RSA");
